# subliminal-demo

./: .gitignore  .gitmodules  README.md  filtering.tex  pyproject.toml
data/clean/: nl_filtered.jsonl  numbers_filtered.jsonl  numbers_raw.jsonl
outputs/eval/: clean-nl-clean-checkpoint-168.json  clean-nl-clean-checkpoint-252.json  clean-nl-clean-checkpoint-336.json  clean-nl-clean-checkpoint-420.json  clean-nl-clean-checkpoint-504.json  clean-nl-clean-checkpoint-588.json  clean-nl-clean-checkpoint-672.json  clean-nl-clean-checkpoint-756.json  clean-nl-clean-checkpoint-84.json  clean-nl-clean-checkpoint-840.json  clean-nl-clean-final.json  clean-numbers-clean-checkpoint-168.json  clean-numbers-clean-checkpoint-252.json  clean-numbers-clean-checkpoint-336.json  clean-numbers-clean-checkpoint-420.json  clean-numbers-clean-checkpoint-504.json  clean-numbers-clean-checkpoint-588.json  clean-numbers-clean-checkpoint-672.json  clean-numbers-clean-checkpoint-756.json  clean-numbers-clean-checkpoint-84.json  clean-numbers-clean-checkpoint-840.json  clean-numbers-clean-final.json  harris-nl-q1-checkpoint-1078.json  harris-nl-q1-checkpoint-1232.json  harris-nl-q1-checkpoint-1386.json  harris-nl-q1-checkpoint-154.json  harris-nl-q1-checkpoint-1540.json  (+216 more)
scripts/: 01_generate_data.py  02_filter_data.py  03_compute_lls.py  03b_compute_cross_lls.py  04_prepare_splits.py  05_train_all.py  06_evaluate_all.py  06b_regrade_eval.py  06c_eval_swapped.py  07_upload_hf.py  08_plot_results.py  09_plot_lls.py  09_regrade_and_shutdown.sh
src/: compute_lls.py  config.py  prepare_splits.py
(+282 files in other folders)
